# tareaCorta1

./: CMakeLists.txt  DEFINITIONS.h  main.cpp
manejo_memoria/: MemoriaPrincipal.cpp  MemoriaPrincipal.h  Pagina.cpp  Pagina.h  Procesador.cpp  Procesador.h  UnidadManejoMemoria.cpp  UnidadManejoMemoria.h  leerTXT.cpp  leerTXT.h
pizzas/: Hawaiana.txt  JamonYQueso.txt  Pizzas  SoloCarne.txt  SoloQueso.txt  Suprema.txt
